# Connect4-with-TootandOtto

./: Cargo.toml  LICENSE_MIT  README.md
backend/: Cargo.toml
backend/src/: game.rs  main.rs
models/: Cargo.toml
models/src/: game.rs  game_board.rs  game_boards.rs  lib.rs
src/: app.rs  lib.rs
src/components/: content.rs  game_history.rs  mod.rs  score_board.rs  sidebar.rs
src/components/connect4/: computer.rs  human.rs
src/components/toot_otto/: computer.rs  human.rs  mod.rs
src/components/utils/: mod.rs  table_builder.rs
www/: index.html  index.js  package-lock.json  package.json
