[package]
name = "backend"
version = "0.1.0"
authors = ["bojotamara <tamarabojovic@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
chrono = "0.4.11"
serde = "1.0.105"
models = { path = "../models", version = "0.1.0" }

[dependencies.rocket]
version = "0.4.4"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
